--- a/eventos/pom.xml
+++ b/eventos/pom.xml
@@ -24,5 +24,10 @@
             <version>1.8.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>5.1.0</version>
+        </dependency>
     </dependencies>
 </project>
