--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <dependency>
-            eventos
-        </dependency>
+        <dependency>eventos</dependency>        
+        <dependency>pipeline</dependency>
     </dependencies>
-
 </project>
